restructured some files

--- a/compiler/Makefile
+++ b/compiler/Makefile
@@ -7,7 +7,7 @@ BIN_DIR = bin
 CFLAGS = -Iinclude
 
 #object files
-OBJS = $(SRC_DIR)/Symboltable.o ${SRC_DIR}/SyntaxTree.o ${SRC_DIR}/Queue.o ${SRC_DIR}/Stack.o
+OBJS = $(SRC_DIR)/Symboltable.o ${SRC_DIR}/SyntaxTree.o ${SRC_DIR}/CodeGeneration.o ${SRC_DIR}/Queue.o ${SRC_DIR}/Stack.o
 
 compiler: $(SRC_DIR) $(BIN_DIR) $(OBJS) lex yacc
 	@$(CC) -g $(SRC_DIR)/lex.yy.c $(SRC_DIR)/y.tab.c $(OBJS) -o $(BIN_DIR)/compiler
@@ -33,6 +33,9 @@ $(SRC_DIR)/Queue.o: $(SRC_DIR)/Queue.c $(INCLUDE_DIR)/Queue.h
 
 $(SRC_DIR)/Stack.o: $(SRC_DIR)/Stack.c $(INCLUDE_DIR)/Stack.h
 	@$(CC) $(CFLAGS) -c $(SRC_DIR)/Stack.c -o $(SRC_DIR)/Stack.o
+
+$(SRC_DIR)/CodeGeneration.o: $(SRC_DIR)/CodeGeneration.c $(INCLUDE_DIR)/CodeGeneration.h
+	@$(CC) $(CFLAGS) -c $(SRC_DIR)/CodeGeneration.c -o $(SRC_DIR)/CodeGeneration.o
 
 # Clean target
 clean:
